# ros-multiwii

./: CMakeLists.txt  README.md  package.xml  thrust_map.csv
cfg/: Naze32_rev6.yaml
launch/: betaflight.launch  betaflight_rpi_zero.launch
src/: betaflight_node.cpp  multiwii_node.cpp
